# pogolm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: settings.yaml
include/pgo_with_visual/: map_module.hpp  pogolm_api.hpp
include/pogolm/: disk_storage.hpp  logging.hpp  loop_detector.hpp  map_module.hpp  pogolm_api.hpp  pose_graph.hpp  utils.hpp
launch/: pgo_launch_components.py
src/: loop_detector.cpp  loop_detector_comp.cpp  map_module.cpp  map_module_comp.cpp  pogolm_api.cpp  pose_graph.cpp  pose_graph_comp.cpp  test_node.cpp  utils.cpp
