<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pogolm</name>
  <version>1.0.1</version>
  <description>
  POGOLM (POse Graph Optimization and Landmark Management) is a C++/ROS 2 interface that adds real-time loop detection and pose graph optimization to an existing incremental SLAM/odometry pipeline—targeting resource-constrained mobile robots. It also provides a TF2-independent transform handling strategy so that pose corrections for past timestamps remain consistent, and it can jointly optimize landmarks with the robot trajectory and expose them via query APIs.

</description>
  <maintainer email="dsamuelyan@uos.de">Davit Samuelyan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>factor_graph_interfaces</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>small_gicp</depend>
  <depend>pogolm_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp_components</depend>


  <exec_depend>launch</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
